# blinkai-solana

./: .env-cmdrc  .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/blink-solana/: Cargo.toml
programs/blink-solana/src/: lib.rs
scripts/: CONFIG.ts  create-mint.ts  create-pool.ts  create-state.ts
tests/: blink-solana.ts
